<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:orderInCategory="0"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/instructors"
        android:orderInCategory="0"
        android:title="@string/instructors"
        app:showAsAction="never" />

    <item
        android:id="@+id/addInstructors"
        android:orderInCategory="0"
        android:title="@string/addInstructors"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="0"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/quit"
        android:orderInCategory="0"
        android:title="@string/quit"
        app:showAsAction="never" />

</menu>